--- a/Mega.WebService.GraphQL.IntegrationTests/app.config
+++ b/Mega.WebService.GraphQL.IntegrationTests/app.config
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <appSettings file="App.Local.config">
+    <add key="Host" value="localhost"/>
+    <add key="DBType" value="SQLSERVER"/>
+    <add key="DBServer" value="(local)\\SQL2017"/>
+    <add key="DBUser" value="sa"/>
+    <add key="DBPassword" value="mega"/>
+    <add key="RequesterType" value="ApiKey"/>
+    <add key="ApiKeyAdmin" value=""/>
+  </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
